--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,16 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["goal-tracking", "task-management", "team-collaboration"],
+  "keywords": [
+    "goal-tracking",
+    "task-management",
+    "team-collaboration"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
+    "pg": "^8.11.3",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
