--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,9 @@ JWT_SECRET=your-super-secret-key-change-this-in-production-123456
 
 # Database
 DB_PATH=./team_tracker.db
+
+# Sentry Error Tracking (Optional - get your DSN from sentry.io)
+SENTRY_DSN=
+
+# Frontend URL (for CORS in production)
+FRONTEND_URL=https://tackstracker.vercel.app
