Add AI-powered features with free Groq API integration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,8 @@ SENTRY_DSN=
 
 # Frontend URL (for CORS in production)
 FRONTEND_URL=https://tackstracker.vercel.app
+
+# AI Features (Optional - get free API key from console.groq.com)
+AI_ENABLED=false
+GROQ_API_KEY=
+AI_RATE_LIMIT_PER_HOUR=20
