--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_AI_ENABLED=false
 
 # Sentry Error Tracking (Optional - get your DSN from sentry.io)
 REACT_APP_SENTRY_DSN=
